--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -1,25 +1,28 @@
 <header title="购物车"></header>
-<view class="cart">
-  <view class="cart_item"  wx:for="{{goodsList}}" wx:key="index" >
-    <view><t-radio checked="{{item.checked}}" bind:change="selectList" data-index="{{index}}"/></view>
-    <view class="info">
-      <image  src="{{item.imgs[0]}}" ></image>
-      <view>
-        <view class="title">{{item.title}}</view>
-        <view class="desc">{{item.desc}}</view>
-        <view class="other">
-          <text >￥{{item.price}}</text>
-          <view><t-stepper data-index="{{index}}" bind:change="handleChange" value="{{item.count}}" step="1" /></view>
+<view class="container">
+  <view class="cart">
+    <view class="cart_item"  wx:for="{{goodsList}}" wx:key="index" >
+      <view><t-radio checked="{{item.checked}}" bind:change="selectList" data-index="{{index}}"/></view>
+      <view class="info">
+        <image  src="{{item.imgs[0]}}" ></image>
+        <view>
+          <view class="title">{{item.title}}</view>
+          <view class="desc">{{item.desc}}</view>
+          <view class="other">
+            <text >￥{{item.price}}</text>
+            <view><t-stepper data-index="{{index}}" bind:change="handleChange" value="{{item.count}}" step="1" /></view>
+          </view>
         </view>
       </view>
     </view>
   </view>
+  
+  <view class="control">
+    <view><view><t-radio checked="{{allChecked}}" bind:change="selectAll" label="全选"/></view><view>￥{{totalPrice}}</view></view>
+    <view bindtap="skipToPay">去结算</view>
+  </view>
 </view>
 
-<view class="control">
-  <view><view><t-radio checked="{{allChecked}}" bind:change="selectAll" label="全选"/></view><view>￥{{totalPrice}}</view></view>
-  <view bindtap="skipToPay">去结算</view>
-</view>
 <!-- <view class="container">
   <view class="goodslist">
     <view wx:for="{{goodsList}}" wx:key="index" wx:for-item="item">
