--- a/pages/goods/commit/commit.wxss
+++ b/pages/goods/commit/commit.wxss
@@ -1,4 +1,7 @@
 /* pages/goods/commit/commit.wxss */
+.container{
+  padding: 0 30rpx;
+}
 .author{
   display: flex;
   justify-content: space-between;
