--- a/pages/ke/item/item.wxml
+++ b/pages/ke/item/item.wxml
@@ -4,7 +4,8 @@
 -->
 <!--pages/ke/item/item.wxml-->
 <header title="文章详情" statue="1"></header>
-<!--loading加载-->
+<view class="container">
+  <!--loading加载-->
 <view class="loading" hover-class="none" hover-stop-propagation="false">
   <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
 </view>
@@ -23,3 +24,5 @@
 </view>
 
 <rich-text nodes="{{info.content}}" ></rich-text>
+</view>
+
