--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -48,3 +48,10 @@ page{
   font-size: 27rpx;
   margin-left: 30rpx;
 }
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
