--- a/pages/order/order_commit/order_commit.wxml
+++ b/pages/order/order_commit/order_commit.wxml
@@ -1,6 +1,15 @@
 <header statue="1" title="商品评价"></header>
-<view class="goods_info"></view>
-<textarea></textarea>
-<view class="sub">
-  <t-button theme="primary" size="large" block="{{true}}">提交</t-button>
+<view class="goods_info">
+  <view><image  src="{{goods.imgs[0]}}"></image></view>
+  
+  <view>
+    <view class="title">{{goods.title}}</view>
+    <view class="desc">{{goods.desc}}</view>
+  </view>
 </view>
+<textarea bindinput="getValue"></textarea>
+<view class="sub">
+  <t-button theme="primary" bindtap="goCommit" size="large" block="{{true}}">提交</t-button>
+</view>
+
+<t-dialog visible="{{show}}" title="评论成功" confirm-btn="返回" bind:confirm="confirmHandle"> </t-dialog>
