--- a/pages/usercenter/address/list/index.wxss
+++ b/pages/usercenter/address/list/index.wxss
@@ -2,6 +2,9 @@ page {
   background: #f5f5f5;
   height: 100%;
 }
+.container{
+  padding: 0 30rpx;
+}
 .bottom-address{
   position: fixed;
   bottom: 20rpx;
