--- a/pages/usercenter/index.wxss
+++ b/pages/usercenter/index.wxss
@@ -1,7 +1,10 @@
 page {
   background-color: #f5f5f5;
-  padding-left: 60rpx;
-  padding-right: 60rpx;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container{
+  padding: 0 60rpx;
   box-sizing: border-box;
 }
 .userinfo{
