--- a/pages/order/order_commit/order_commit.wxss
+++ b/pages/order/order_commit/order_commit.wxss
@@ -1,4 +1,7 @@
 /* pages/order/order_commit/order_commit.wxss */
+.container{
+  padding: 0 30rpx;
+}
 textarea{
   border: 1rpx solid #ccc;
 }
@@ -30,4 +33,11 @@ textarea{
 image{
   width: 200rpx!important;
   height: 180rpx;
+}
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
 }
