--- a/pages/ke/item/item.wxss
+++ b/pages/ke/item/item.wxss
@@ -15,9 +15,8 @@
   margin: 20rpx 0;
 }
 .rich-imgs{
-  text-align: center;
-  max-width: 450rpx;
-  max-height: 230rpx;
+  width: 100%;
+  max-height: 200rpx;
 }
 .loading {
   text-align: center;
@@ -25,4 +24,8 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%,-50%);
+}
+.audio .iconfont{
+  margin-right: 10rpx;
+  color: #39bf3e;
 }
