--- a/pages/ke/ke.wxss
+++ b/pages/ke/ke.wxss
@@ -1,12 +1,33 @@
 page{
-  background-color:#f5f5f5;
+  
   padding: 0;
+}
+.search{
+  padding: 20rpx 20rpx;
+  background-color: #f3f3f3;
+  color: #909090;
+  border-radius: 30rpx;
+  margin-top: 10rpx;
+  margin-bottom: 30rpx;
+  font-size: 30rpx;
+}
+.search .iconfont {
+  position: relative;
+  top: 5rpx;
+  margin-right: 10rpx;
+}
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
 }
 .container{
   padding: 0 30rpx;
 }
 .image_box{
-  width: 97%;
+  width: 98%;
   border-radius: 20rpx;
 }
 .image_box image{
@@ -21,14 +42,49 @@ page{
   padding: 15rpx 10rpx;
   border-radius: 10rpx;
   font-size: 30rpx;
-  color: black;
+  color: #333;
   font-weight: bold;
 }
 .swiper_item text{
   margin-right: 15rpx;
   font-size: 26rpx;
 }
-.hui{
+.t-swiper{
+  max-height: 80rpx!important;
+}
+.header{
+  font-size: 40rpx;
+  font-weight: bold;
+  margin: 20rpx 0 40rpx 0;
+}
+.recommand_item{
+  padding: 30rpx 0;
+  border-bottom: 3rpx solid #eee;
+}
+.title{
+  color: #333;
+  font-size: 37rpx;
+  overflow: hidden;            
+  text-overflow: ellipsis;
+  white-space: nowrap; 
+}
+.imgs{
+  display: flex;
+  justify-content: space-between;
+  padding: 22rpx 0;
+}
+.imgs image{
+  width: 33%;
+  height: 140rpx;
+  border-radius: 15rpx;
+}
+.info{
+  color: #999;
+  font-size: 32rpx;
+  display: flex;
+  justify-content: space-between;
+}
+/* .hui{
   padding: 20rpx 10rpx ;
   border-radius: 20rpx;
   margin-bottom: 40rpx;
@@ -37,8 +93,8 @@ page{
 .title{
   font-size: 40rpx;
   font-weight: bold;
-}
-.hui .item{
+} */
+/* .hui .item{
   padding: 20rpx 0;
   border-bottom: 1rpx solid #ccc;
 }
@@ -115,4 +171,4 @@ page{
 }
 .loading{
   text-align: center;
-}
+} */
