--- a/pages/ke/ke_search/index.wxml
+++ b/pages/ke/ke_search/index.wxml
@@ -1,2 +1,30 @@
-<!--pages/ke/ke_search/index.wxml-->
-<text>pages/ke/ke_search/index.wxml</text>
+<header statue="1" title="农搜索"></header>
+  <!--loading加载-->
+  <view class="loading" hover-class="none" hover-stop-propagation="false">
+    <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
+  </view>
+<view class="container">
+  <view class="search">
+    <view class="search_left">
+      <text class="iconfont icon-sousuo"></text>
+      <input value="{{value}}" bindblur="getValue" placeholder="搜索你需要的农技学堂知识"/>
+    </view>
+    <view class="search_right" bindtap="goSearch">搜索</view>
+  </view>
+
+  <view class="result">
+    <view class="recommand_item" wx:for="{{result}}" wx:key="index" data-id="{{item._id}}" bindtap="write">
+      <view class="title">{{item.title}}</view>
+      <view class="imgs">
+
+        <image wx:for="{{item.img}}" wx:for-item="itm" src="{{itm}}"></image>
+      </view>
+      <view class="info"><text>{{item.author}}</text><text>{{item.time}}</text></view>
+    </view>
+  </view>
+
+  <view wx:if="{{empty}}" class="resultEmpty">
+    <image src="./../../../style/images/bg.png"></image>
+    <view>抱歉，没有找到您要的内容</view>
+  </view>
+</view>
