--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -86,21 +86,49 @@ button{
   position: fixed;
   bottom: 0rpx;
   left: 0;
-  height: 100rpx;
+  height: 140rpx;
   background-color: #fff;
   display: flex;
-  padding: 20rpx 30rpx;
+  padding: 30rpx;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
 }
-.bot>view{
-  border-radius: 20rpx;
-  border:1rpx solid #fff;
-  text-align: center;
-  padding: 10rpx 30rpx;
+.bot_left{
+  display: flex;
+  align-items: center;
+  font-size: 20rpx;
+  color: #666;
 }
-
+.bot_left button{
+  padding: 0;
+  line-height: 40rpx;
+  font-size: 23rpx;
+  color: #666;
+}
+.bot_left>view:first-child{
+  text-align: center;
+  margin-right:50rpx;
+}
+.bot_right{
+  display: flex;
+  align-items: center;
+  border-radius: 30rpx;
+}
+.bot_right>view{
+  text-align: center;
+  width: 200rpx;
+}
+.bot_right>view:first-child{
+  border-radius: 40rpx 0 0 40rpx;
+  color:#fa4126;
+  background-color: #ffece9;
+}
+.bot_right>view:last-child{
+  border-radius: 0 40rpx 40rpx 0;
+  color:#fff;
+  background-color: #fa4126;
+}
 .loading{
   text-align: center;
 }
