--- a/pages/ke/ke.wxss
+++ b/pages/ke/ke.wxss
@@ -1,5 +1,4 @@
 page{
-  
   padding: 0;
 }
 .search{
@@ -55,7 +54,7 @@ page{
 .header{
   font-size: 40rpx;
   font-weight: bold;
-  margin: 20rpx 0 40rpx 0;
+  margin: 20rpx 0 20rpx 0;
 }
 .recommand_item{
   padding: 30rpx 0;
@@ -84,91 +83,50 @@ page{
   display: flex;
   justify-content: space-between;
 }
-/* .hui{
-  padding: 20rpx 10rpx ;
-  border-radius: 20rpx;
-  margin-bottom: 40rpx;
-  background-color: #fff;
-}
-.title{
-  font-size: 40rpx;
-  font-weight: bold;
-} */
-/* .hui .item{
-  padding: 20rpx 0;
-  border-bottom: 1rpx solid #ccc;
-}
-.hui .item>view:nth-child(1){
-  font-size: 32rpx;
-  margin-bottom: 15rpx;
-} 
-.hui .item>view:nth-child(2){
-  font-size: 29rpx;
-  display: flex;
-} 
-.hui .item>view:nth-child(2)>view{
-  margin-right: 20rpx;
-}
-
-.t-swiper{
-  height: 100rpx !important;
-}
-
-.histrory{
-  background-color: #fff;
-}
-.histrory_box .item{
+.expert .header{
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  margin: 15rpx 0;
-  border-bottom: 1rpx solid #ccc;
+}
+.expert .header>view{
+  font-weight: normal;
+  font-size: 32rpx;
+  margin-bottom: 30rpx;
+}
+.expert .answer{
+  width: 100%;
+  background-color: #f5f5f5;
   padding: 15rpx 0;
 }
-.histrory_box .item .title{
-  font-weight: normal;
-  font-size: 34rpx;
-  margin-bottom: 10rpx;
-}
-.histrory_box .item .desc{
-  font-size: 32rpx;
-  color: #272525;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient:vertical;
-  -webkit-line-clamp:2;
-}
-.histrory_box .item image{
-  width: 130rpx;
-  height: 130rpx;
-  border-radius: 50%;
-  margin-right: 25rpx;
-}
-.example{
-  background-color: #fff;
-
-  margin-top: 40rpx;
-}
-
-.example .imgs{
+.expert .answer>view{
   display: flex;
+}
+.expert .answer>view>view:first-child{
+  font-size: 34rpx;
+  margin-right: 15rpx;
+  padding: 6rpx;
+  color: #fff;
+  max-height: 45rpx;
+}
+.expert .answer>view>view:last-child{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+  word-break: break-all;
+  font-size: 34rpx;
+}
+.expert .answer>view:first-child{
+  margin-bottom: 30rpx;
+}
+.expert .answer>view:last-child>view:last-child{
+  font-size: 32rpx;
+}
+.wen{
+  background-color: #39bf3e;
+}
+.da{
+  background-color: #ff5c00;
   
 }
-.example .item{
-  margin: 15rpx 0;
-  border-bottom: 1rpx solid #ccc;
-  padding: 15rpx 0;
-}
-.example .item .title{
-  font-weight: normal;
-  font-size: 35rpx;
-  margin-bottom: 15rpx;
-}
-.example .imgs image{
-  max-width: 210rpx;
-  height: 140rpx;
-  margin: 0 15rpx;
-}
-.loading{
-  text-align: center;
-} */
