--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -7,17 +7,18 @@
 </view>
 <t-tabs defaultValue="{{value}}" bind:change="onTabsChange">
   <t-tab-panel wx:for="{{tarbars}}" wx:key="idnex" label="{{item.content}}" value="{{item.value}}">
-    <view class="box" wx:for="{{orderList}}" wx:for-index="index1" wx:key="index"  wx:for-item="itm">
-      <view class="nav_title">
+    <view class="box" wx:for="{{showItem}}" wx:for-index="index1" wx:key="index"  wx:for-item="itm">
+      <view wx:if="{{itm.OrderList.length}}" class="nav_title">
         <view>订单号：{{itm._id}}</view>
       </view>
-      <view class="content" wx:for="{{itm.OrderList}}" wx:for-index="index2" wx:for-item="itm2">
+      <view wx:if="{{itm.OrderList.length}}" class="content" wx:for="{{itm.OrderList}}" wx:for-index="index2" wx:for-item="itm2">
         <image src="{{itm2.goods.imgs[0]}}"></image>
         <view class="content_info">
           <view>
             <view>{{itm2.goods.title}}</view>
             <view class="desc">{{itm2.goods.desc}}</view>
-            <view data-index1="{{index1}}" data-index2="{{index2}}" bindtap="goCommit" class="commit" wx:if="{{!itm2.commit}}">评价</view>
+            <view data-index1="{{index1}}" data-index2="{{index2}}" bindtap="goCommit" class="commit" wx:if="{{!itm2.commit && itm2.statue==3}}">评价</view>
+            <view data-id="{{itm2._id}}" bindtap="goReceive" class="commit" wx:if="{{itm2.statue==2}}">确认收获</view>
           </view>
           <view>
             <view class="price">￥{{itm2.goods.price}}</view>
