--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,8 +1,9 @@
 <header title="搜索" statue="1"></header>
 <view class="container">
   <view class="search-header">
-      <input name="input" class="keyword" focus="true" value="{{keyword}}" confirm-type="search" bindconfirm="onKeywordConfirm" confirm-type="search" placeholder="搜索你想要的一切" />
-  </view>
+      <input name="input" class="keyword" focus="true" value="{{keyword}}"  placeholder="搜索你想要的一切" />
+      <view class="search_right" bindtap="onKeywordConfirm">搜索</view>
+    </view>
   <view class="section">
     <picker bindchange="bindPickerChange1" value="{{index1}}" range="{{array1}}">
       <view class="picker">
