--- a/pages/usercenter/manage/manage.wxss
+++ b/pages/usercenter/manage/manage.wxss
@@ -1,21 +1,19 @@
-/* pages/order/order.wxss */
-page{
-  background-color: #f5f5f5;
-  padding-left: 0;
-  padding-right: 0;
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
 }
-.box{
+.container{
+  padding: 0 30rpx;
+}.content_info{
+  font-size: 32rpx;
+}
+.content{
   background-color: #fff;
-  padding: 20rpx 40rpx;
-}
-.nav_title{
-  display: flex;
-  justify-content: space-between;
   padding: 20rpx 0;
-}
-.nav_title_info{
-  color: red;
-  
+  border-bottom: 1rpx solid #ccc;
 }
 .content{display: flex;align-items: center;}
 .content image{
@@ -39,7 +37,7 @@ page{
   color:red;
 }
 .commit{
-  width: 120rpx;
+  width: 90rpx;
   padding: 10rpx 15rpx;
   border-radius: 15rpx;
   color: #fff;
@@ -47,12 +45,18 @@ page{
   text-align: center;
   font-size: 27rpx;
   margin-left: 30rpx;
-  margin-top: 15rpx;
 }
-.loading{
+.send{
+  padding: 10rpx;
+  font-size: 32rpx;
+  background-color: red;
+  margin-top: 20rpx;
+  border-radius: 10rpx;
+  color:#fff;
   text-align: center;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
+}
+.tip{
+  text-align: center;
+  padding-top: 300rpx;
+  font-weight: bold;
 }
