--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,13 +1,13 @@
 <header title="搜索" statue="1"></header>
 <view class="container">
   <view class="search-header">
-      <input name="input" class="keyword" focus="true" value="{{keyword}}"  placeholder="搜索你想要的一切" />
-      <view class="search_right" bindtap="onKeywordConfirm">搜索</view>
+      <input name="input" bindfocus="focus" bindinput="input" class="keyword" value="{{value}}"  placeholder="搜索你想要的一切" />
+      <view class="search_right" bindtap="searchRes">搜索</view>
     </view>
-  <view class="section">
-    <picker bindchange="bindPickerChange1" value="{{index1}}" range="{{array1}}">
+  <view class="section" wx:if="{{selectBox && !empty}}">
+    <picker bindchange="bindPickerChange1" range-key="name" value="{{index1}}" range="{{sorts}}">
       <view class="picker">
-        分类：{{array1[index1]}}
+        分类：{{sorts[index1].name}}
       </view>
     </picker>
     <picker bindchange="bindPickerChange2" value="{{index2}}" range="{{array2}}">
@@ -16,7 +16,7 @@
       </view>
     </picker>
   </view>
-  <view class="search-result" wx:if="{{searchStatus}}">
+  <view class="search-result">
     <view class="goods-container">
       <view wx:for="{{showList}}" wx:key="id" class="item" data-id="{{item._id}}" bindtap="getGoods">
         <view class="box">
