--- a/pages/usercenter/help/help.wxss
+++ b/pages/usercenter/help/help.wxss
@@ -39,3 +39,10 @@ textarea{
   width: 160rpx;
   height: 160rpx;
 }
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
