--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -1,4 +1,8 @@
 <header title="搜索" statue="1"></header>
+<!--loading加载-->
+<view class="loading" hover-class="none" hover-stop-propagation="false">
+  <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
+</view>
 <view class="container">
   <view class="search-header">
       <input name="input" bindfocus="focus" bindinput="input" class="keyword" value="{{value}}"  placeholder="搜索你想要的一切" />
