--- a/pages/search/search.wxss
+++ b/pages/search/search.wxss
@@ -135,3 +135,10 @@
 	font-weight:bold;
 	text-shadow:0px 1px 0px #ffffff;
 }
+.loading{
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
