--- a/pages/usercenter/help/help.wxml
+++ b/pages/usercenter/help/help.wxml
@@ -4,7 +4,10 @@
 -->
 <!--pages/usercenter/help/help.wxml-->
 <header title="帮助中心" statue="1"></header>
-
+<!--loading加载-->
+<view class="loading" hover-class="none" hover-stop-propagation="false">
+  <t-loading theme="spinner" size="40rpx" loading="{{loading}}"></t-loading>
+</view>
 <view class="container">
   <view>问题描述</view>
 <textarea placeholder='请填写...' 	bindblur='getInfo'></textarea>
